Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-module",
+    "name": "@lamanicurista/my-fucking-module",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
