--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@lamanicurista/my-fucking-module",
-    "version": "1.0.0",
+    "version": "1.0.4",
     "description": "",
-    "main": "index.js",
+    "main": "lib/index.js",
     "types": "lib/types/index.d.ts",
     "repository": {
         "type": "git",
